--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -782,3 +782,8 @@ li.sp-category-item-info-category a:hover{
 /*Visitors Counter*/
 .sp-visible-counter, .sp-visible-counter h3{width:50%;float:right;}
 .sp-visible-counter table{width:100%!important;}
+
+/*gkupdates*/
+#gkUpdates {
+    display: block!important;
+}
