Fix category list tree li height

--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -540,8 +540,7 @@ text-shadow: 2px 2px #000000;
 /* Business -------------------------------------------------------------------------------------------------*/
 .categories-list-tree .level0>li{
     width:33%;
-    display:inline-block;
-    float:left;
+    display:inline-table;
     
 }
 
